--- a/2_createPageAndDataRendering/package.json
+++ b/2_createPageAndDataRendering/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "1_createSampleProject",
+	"name": "2_createPageAndDeclerativeRendering",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
