Vue Instance with temmplates

--- a/2_vueInstanceProject/package.json
+++ b/2_vueInstanceProject/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "2_createPageAndDeclerativeRendering",
+	"name": "2_vueInstanceProject",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
